--- a/Taxi/Forms/FormLogin.resx
+++ b/Taxi/Forms/FormLogin.resx
@@ -125,6 +125,10 @@
   <data name="labelinfo.Font" type="System.Drawing.Font, System.Drawing">
     <value>Century Gothic, 21.75pt</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="labelinfo.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="labelinfo.Location" type="System.Drawing.Point, System.Drawing">
     <value>35, 208</value>
   </data>
@@ -154,9 +158,11 @@ Halipov Evgenii
   <data name="&gt;&gt;labelinfo.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="pictureBox1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Top</value>
+  </data>
+  <data name="pictureBox1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="pictureBox1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
@@ -1053,6 +1059,9 @@ Halipov Evgenii
   <data name="label1.Font" type="System.Drawing.Font, System.Drawing">
     <value>Century Gothic, 14.25pt</value>
   </data>
+  <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>112, 95</value>
   </data>
@@ -1110,18 +1119,6 @@ Halipov Evgenii
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>1328, 433</value>
-  </data>
-  <data name="ButtonExit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAIGNIUk0AAHolAACAgwAA+f8AAIDoAABS
-        CAABFVgAADqXAAAXb9daH5AAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAE1SURBVFhH1Y6xEsMwCEM79P/X
-        /m3dkHM4CcvUdnrJdXiDQEg8Sim3IodXIodXQuL9en6jDKJuHewkocwVVTKCyqJOEsKsQlegXOwkEYwq
-        yIi+iLox3IOdJMCUBgzSzcBOEoehmpvDBWQOdpKoBnl0giYPO0nYMpoFvbmR3XgmdpIIxt0c+MVuqxp7
-        IA2pjOwaD3bOPBD3Gektds4+YKBHoW4M92DnygMG+hDlPXAfdv7lA+hRqBvDPdg5+wDuM9Jb7Jx5AHfR
-        k+0aD3ZmDxjdEJjN7raq/gPRjCG4V3Mju/FM7CQhzPvBSZo87CRhy0pztIjMwU4Sh6Ga5fEE3QzsJHEY
-        KirAiL6IujHcg50k0FRRQStQLnaSiEZAhY6gsqiThDIHVIlC3TrYSeIO5PBK5PA6yuMDVbmHOLa9nI4A
-        AAAASUVORK5CYII=
-</value>
   </data>
   <data name="ButtonExit.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -1203,6 +1200,9 @@ Halipov Evgenii
   </data>
   <data name="&gt;&gt;ButtonUSA.ZOrder" xml:space="preserve">
     <value>2</value>
+  </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Taxi</value>
