--- a/Taxi/UserControls/RouteUC.resx
+++ b/Taxi/UserControls/RouteUC.resx
@@ -136,4 +136,7 @@
         OYqhHMVQjmIoRy0ReQMfY+Jwygb/3QAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="bunifuElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>180, 23</value>
+  </metadata>
 </root>
